# Aiya-qqbot

./: README.md
2/: requirements.txt
Lagrange.OneBot/: appsettings.json  device.json  keystore.json  lagrange-0-log.db  lagrange-0.db
go-cqhttp/: config.yml  device.json  go-cqhttp.bat
go-cqhttp/Qsign-1.2.0b2/: LICENSE  device.js
go-cqhttp/Qsign-1.2.0b2/unidbg-fetch-qsign/: api.bat
go-cqhttp/data/images/: LOG
go-cqhttp/data/leveldb-v3/: LOG
go-cqhttp/data/videos/: LOG
lhcbot/: .env.dev  .env.prod  bot.py  nonebot_adapter_satori-0.12.3-py3-none-any.whl  pyproject.toml
lhcbot/bingcookies/: cookies.json
lhcbot/data/blacklist/: blacklist.json
lhcbot/data/bottle/: permissionsList.json
lhcbot/data/dog/: restart.sh
lhcbot/data/friend/: friend.json
lhcbot/data/multincm/: session.cache
lhcbot/data/multincm/song_cache/: Song_1496812174.silk
lhcbot/src/: 千问1 copy.py  千问1.py
lhcbot/src/plugins/: fake_msg.py  kebi.py  novalai.py  operation.py  qwenAIYA.py  welcome.py  丁真.py  全角色语音AI(4).py  戳.py  综合.py
