[tool.poetry]
name = "lhcbot"
version = "0.1.0"
description = "lhcbot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_fakepic","nonebot_plugin_setu_now","nonebot_plugin_setu_now", "nonebot_plugin_waiter", "nonebot_plugin_picstatus", "nonebot_plugin_addFriend", "nonebot-plugin-resolver", "nonebot_plugin_githubcard", "nonebot_plugin_fakemsg", "nonebot_plugin_multincm"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
